# specster

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.cfg
scripts/: extract_data_dirs.py
src/specster/: __init__.py  _settings.py  constants.py  exceptions.py  model.py  settings.py  utils.py  version.py
src/specster/core/: callout.py  control.py  grid.py  misc.py  misfit.py  models.py  optimize.py  output.py  parse.py  plotting.py  preconditioner.py  printer.py  render.py  stations.py  waveforms.py
src/specster/d2/: __init__.py  control2d.py  output.py  output2d.py  viz.py
src/specster/d2/base_case_2d/DATA/: Par_file  SOURCE  readme.md
src/specster/d2/data/acoustic_reflector/DATA/: Par_file  SOURCE
src/specster/d2/data/checkerboard_2d/DATA/: Par_file  STATIONS
src/specster/d2/data/homogeneous_2d/DATA/: Par_file  SOURCE
src/specster/d2/data/inclusion_2d/DATA/: Par_file  SOURCE  STATIONS
src/specster/d2/io/: __init__.py  parfile.py
src/specster/d2/templates/: Par_file  SOURCE  STATIONS
src/specster/fwi/: __init__.py  inverter.py  kernel.py  misfit.py
src/specster/templates/: SOURCE
src/specster/utils/: __init__.py  callout.py  control.py  misc.py  models.py  printer.py  render.py  waveforms.py
tests/: conftest.py  test_settings.py  test_utils.py
tests/test_2D/: conftest.py  test_control.py  test_control_2D.py  test_end_to_end.py  test_output2d.py  test_read_write_material_models.py
tests/test_2D/test_data/: receiver_2d_lines
tests/test_2D/test_data/bin_directory/: readme.txt
tests/test_2D/test_io/: test_read_kernels.py  test_read_parfiles.py  test_read_write_material_models.py  test_write_parfiles.py
tests/test_core/: test_callout.py  test_format.py  test_grid.py  test_parse.py  test_plot_kernel.py  test_preconditioner.py  test_render.py  test_waveforms.py
tests/test_core/test_data/precon/: example_stations.parquet  iteration_kernel.parquet
tests/test_data/ascii_waveform_files/: AA.S0001.BXX.semd  AA.S0001.BXZ.semd  AA.S0002.BXX.semd  AA.S0002.BXZ.semd  AA.S0003.BXX.semd  AA.S0003.BXZ.semd
tests/test_data/misfit_waveforms/: initial.mseed  true.mseed
tests/test_fwi/: test_2d_fwi_e2e.py  test_misfit.py
tests/test_utils/: test_callout.py  test_format.py  test_misc.py  test_render.py  test_waveforms.py
