
# --- Build system configuration

[build-system]
requires = [ "setuptools>=41", "setuptools-scm", ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools_scm]  # this empty section enables the tool


# --- Project Metadata

[project]
name = "specster"
dynamic = ["version"]  # version is fetched by setuptools-git-versioning

authors = [
  { name="Derrick Chambers", email="chambers.ja.derrick@gmail.com" },
]

description = "A python harnass to tame the specfem beast"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

keywords = ["geophysics"]

# --- Dependencies

dependencies = [
    "numpy >= 1.13.0",
    "pydantic",
    "obspy",
    "obsplus",
    "matplotlib",
    "jinja2",
    "rich",
    "pyvista",
    "pyarrow",
]

[project.optional-dependencies]

test = [
    "pytest",
    "pre-commit",
]
dev = ["specster[test]"]

# --- URLs for project

[project.urls]
"Bug Tracker" = "https://github.com/d-chambers/specster/issues"
"Documentation" = "https://github.com/d-chambers/specster"
"Homepage" = "https://github.com/d-chambers/specster"
# -- Linter configuration

[tool.ruff]

line-length = 88

# Controls the categories of ruff rules applied.
lint.select = [
    "E",
    "F",
    "UP",
    "RUF",
    "I001",
    "D",
    "FA",
    "T",
    "N",
    "NPY",
    "NPY201",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__init__.py"
]

# lowest python version supported
target-version = "py310"

# Ensure ruff just fixes stuff it can safely fix.
lint.fixable = ["ALL"]

# List of codes to ignore.
lint.ignore = ["D105", "D107", "D401", "D205", "D200", "D400"]

[tool.ruff.lint.mccabe]
# Controls how complex functions/methods can be.
max-complexity = 10

# config for docstring parsing
[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"
